--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 Toponym:
 <input type="text" id="toponym">
 <br><br>
+<div id="suggestedToponyms"></div>
 
-[Map]
+
+<!-- [Map] -->
+<br><br>
 <br><br>
 
 Topics of interest:
@@ -38,8 +41,11 @@ Topics of interest:
 
 
 
+<div id="newsArticles"></div>
 
 
+
+<br><br>
 <br><br>
 This website uses data from NewsAPI.org (Developer plan).
 
