--- a/index.html
+++ b/index.html
@@ -3,51 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>LoBaNS – location-based news search</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="ui.js"></script>
     <script src="toponym_search_handler.js"></script>
 </head>
 <body>
 
-<h1>
-    LoBaNS – location-based news search
-</h1>
-
-
-Toponym:
-<input type="text" id="toponym">
-<br><br>
-<div id="suggestedToponyms"></div>
-
-
-<!-- [Map] -->
-<br><br>
-<br><br>
-
-Topics of interest:
-<br>
-<input type="checkbox" class="topic" id="all">all topics<br>
-<input type="checkbox" class="topic" id="general">general<br>
-<input type="checkbox" class="topic" id="science-and-nature">science-and-nature<br>
-<input type="checkbox" class="topic" id="technology">technology<br>
-<input type="checkbox" class="topic" id="business">business<br>
-<input type="checkbox" class="topic" id="politics">politics<br>
-<input type="checkbox" class="topic" id="sport">sport<br>
-<input type="checkbox" class="topic" id="health-and-medical">health-and-medical<br>
-<input type="checkbox" class="topic" id="entertainment">entertainment<br>
-<input type="checkbox" class="topic" id="music">music<br>
-<input type="checkbox" class="topic" id="gaming">gaming<br>
-<br><br>
+<div class="center_container">
+    <h2>
+        LoBaNS – location-based news search
+    </h2>
+    <span style="font-style: italic">This website uses data from <a href="http://NewsAPI.org">NewsAPI.org</a> (developer plan).</span>
+    <br><br><br>
 
 
 
-<div id="newsArticles"></div>
+    Toponym:
+    <input type="text" id="toponym">
+    <br><br>
+    <div id="suggestedToponyms"></div>
 
 
+    <!-- [Map] -->
+    <br><br>
 
-<br><br>
-<br><br>
-This website uses data from NewsAPI.org (Developer plan).
+    Topics of interest:
+    <br>
+    <input type="checkbox" class="topic" id="all">all topics<br>
+    <input type="checkbox" class="topic" id="general">general<br>
+    <input type="checkbox" class="topic" id="science-and-nature">science-and-nature<br>
+    <input type="checkbox" class="topic" id="technology">technology<br>
+    <input type="checkbox" class="topic" id="business">business<br>
+    <input type="checkbox" class="topic" id="politics">politics<br>
+    <input type="checkbox" class="topic" id="sport">sport<br>
+    <input type="checkbox" class="topic" id="health-and-medical">health-and-medical<br>
+    <input type="checkbox" class="topic" id="entertainment">entertainment<br>
+    <input type="checkbox" class="topic" id="music">music<br>
+    <input type="checkbox" class="topic" id="gaming">gaming<br>
+    <br><br>
+
+
+    <div id="newsArticles"></div>
+
+
+</div>
+
 
 
 </body>
